# Jornada_Engenheiro_de_Software

./: .gitignore  README.md  pyproject.toml
app/: main.py  models.py  schemas.py
app/database/: _schema_rascunho.sql  database.py  schema.sql
learning-journal/sessao_02/: session_2.py
learning-journal/sessao_03/: session_3_exercicio.py
learning-journal/sessao_05/: main.py  utils.py
learning-journal/sessao_07/: OBSERVACAO.md
learning-journal/sessao_09/: session_9.py
learning-journal/sessao_10/: session_10.py
learning-journal/sessao_11/: session_11.py
learning-journal/sessao_13_14_workflow/: OBSERVACAO.md
learning-journal/sessao_16/: OBSERVACAO.md
sessao_01/: session_1.py
sessao_03/: session_3.py
sessao_04/: session_4.py
sessao_05/: OBSERVACAO.md
sessao_06/: session_6.2.py  session_6.py
sessao_08/: session_8.py
sessao_12/: session_12.py
sessao_17/: main.py
tests/: test_utils.py
